# caffs

./: .gitignore  CNAME  README.md  pyproject.toml  run.py
.github/workflows/: scrape.yml
docs/: caffs_not_cafes.geojson
frontend/: index.html  locations.geojson  main.js
scraper/: __init__.py  cleaner.py  exceptions.py  scraper.py  settings.py
