[tool.poetry]
name = "caffsmap"
version = "0.1.0"
description = ""
authors = ["Francisco Macedo <franciscovcbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
