[tool.poetry]
name = "caffs"
version = "0.1.0"
description = "caffs not cafes instagram posts map"
authors = ["Francisco Macedo <me@fmacedo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
instagraper = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
